--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
     margin: 200px;
     text-align: center;
   }
+
+  body {
+  font-family: 'Open Sans', sans-serif !important;
+  }
+
+  h1 {
+    font-family: 'Montserrat', sans-serif !important;
+  }
