--- a/customcss.css
+++ b/customcss.css
@@ -63,20 +63,53 @@ a:hover {
   background-color: black;
   padding: 0px;    
   margin: 0px;
-  height:200px;
+  height:400px;
   text-align: center;
   vertical-align: bottom;
 }
 .image-block > p {
   width: 100%;
   height: 100%;
-  font-weight: normal;
-  font-size: 19px;
-  padding: 50px;
+  padding: 20px;
+  text-align: center;
   background-color: rgba(3,3,3,0.0);
   color: rgba(6,6,6,0.0);
 }
 .image-block:hover > p {
   background-color: rgba(3,3,3,0.5);    
   color: white;    
+}
+
+.pill {
+  pointer-events: none;
+  background-color: #ebecf0;
+  border: none;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 13px;
+  margin-left: -1px;
+  margin-bottom: 5px;
+  border-radius: 100px;
+}
+
+.btn-primary,
+.btn-primary:hover,
+.btn-success:active,
+.btn-primary:visited {
+  background-color: #264653;
+  color: #ffffff !important;
+  border: none;
+}
+
+.modal {
+  text-align: center;
+}
+
+.modal-dialog {
+  text-align: left; /* you'll likely want this */
+  max-width: 75%;
+  width: auto !important;
+  display: inline-block;
 }
