--- a/customcss.css
+++ b/customcss.css
@@ -56,7 +56,7 @@ a:hover {
 .jumbotron {
   background: url(images/kite.jpg) fixed center no-repeat;
   background-size: cover;
-  background-repeat: no-repeat;
+  z-index: -1 !important;
  }
 
 .image-block {
