--- a/customcss.css
+++ b/customcss.css
@@ -56,7 +56,12 @@ a:hover {
 .jumbotron {
   background: url(images/kite.jpg) fixed center no-repeat;
   background-size: cover;
-  z-index: -1 !important;
+  -webkit-background-size: cover !important;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-attachment: fixed !important;
+position: static !important;
+z-index: -1 !important;
  }
 
 .image-block {
