--- a/customcss.css
+++ b/customcss.css
@@ -56,7 +56,12 @@ a:hover {
 .jumbotron {
 /*  background: fixed center no-repeat; */
   background-size: cover;
- }
+  background: no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  }
 
 .image-block {
   border: 3px solid white ;
